Revert "Add java security properties for surefire"
Now that all tests can handle a disabled SecurityManger it doesn't have
to be enabled by default anymore.

This reverts commit d9bd89b48d86573dee8313d2c717ebe2a0541032.